--- a/app-1/src/App.css
+++ b/app-1/src/App.css
@@ -1,5 +1,18 @@
+
 .App {
   text-align: center;
+  background-color: #282c34;
+  height: 100vh;
+  color: #61dafb;
+}
+.form{
+  padding-top: 25px;
+}
+.submit{
+  background: transparent;
+  color: #61dafb;
+  margin-left: 10px;
+
 }
 
 .App-logo {
